<resources>
    <string name="app_name">Minigame Marathon</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_run">SAVE RUN</string>
    <string name="new_game">New Game</string>
    <string name="leader_board">Leader Board</string>
    <string name="train">Train</string>
    <string name="enter">Enter</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="color">Color</string>
    <string name="best">Best</string>
    <string name="game">Game</string>
    <string name="score">Score</string>
    <string name="total_time">Total Time</string>
    <string name="section_time">Section Time</string>
    <string name="result_summary">RESULT SUMMARY</string>
    <string name="a_z">A - Z</string>
    <string name="time">Time</string>
    <string name="game_name">Game Name</string>
    <string name="time_end">Time:</string>
    <string name="score_end">Score:</string>
    <string name="rank">rank</string>
    <string name="generate_new_puzzle">Generate New Puzzle</string>
    <string name="reset_current_puzzle">Reset Current Puzzle</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="minigame_marathon_2017">Minigame Marathon 2017</string>
    <string name="created_by_thecompscinoob_hedgey579_chrysopelea_rc">Created By: TheCompSciNoob | hedgey579 | Chrysopelea-Rc</string>
    <string name="settings">Settings</string>
    <string name="who_needs_friends_when_you_have_skillz">Who needs friends when you have skillz?</string>
    <string name="choose_game">Choose Game</string>
    <string name="choose_game_mode">Choose Game Mode</string>
    <string name="confirm">Confirm</string>
    <string name="name">Name</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="save_online">Save Online</string>
    <string name="start">START</string>
    <string name="loading">Loading...</string>
    <string name="total">Total</string>
    <string name="world_leader_board">World Leader Board</string>
    <string name="how_to_play">How to Play</string>
    <string name="about_us">About Us</string>
    <string name="game_description">Game Description</string>
    <string name="view_source_code">View Source Code</string>
    <string name="developers">Developers</string>
</resources>
