<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/game_new"
            android:icon="@drawable/ic_videogame_asset_black_24dp"
            android:title="@string/new_game" />
        <item
            android:id="@+id/score_high"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/leader_board" />
        <item
            android:id="@+id/world_leader_board"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="@string/world_leader_board" />
        <item
            android:id="@+id/practice"
            android:icon="@drawable/ic_games_black_24dp"
            android:title="@string/train" />
        <item
            android:id="@+id/how_to_play"
            android:icon="@drawable/ic_games_black_24dp"
            android:title="@string/how_to_play" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_games_black_24dp"
            android:title="@string/about_us" />
    </group>

</menu>
