<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/game_name"
        android:textSize="36sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_name" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/game_time"
            android:textSize="24sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_end" />

        <TextView
            android:id="@+id/game_score"
            android:textSize="24sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/score_end" />

    </LinearLayout>
</LinearLayout>