<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">

    <TextView
        android:text="@string/who_needs_friends_when_you_have_skillz"
        android:textColor="@color/navBarBackground"
        android:textAlignment="center"
        android:textSize="36sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/AlertDialog.AppCompat.Light"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_game"/>

    <Spinner
        android:layout_margin="8dp"
        android:id="@+id/practice_choose_game_spinner"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/AlertDialog.AppCompat.Light"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_game_mode"/>

    <Spinner
        android:layout_margin="8dp"
        android:id="@+id/practice_choose_gamemode_spinner"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/confirm_practice_option_button"
        style="@style/buttonStyle"
        android:text="@string/confirm"
        android:textSize="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>