<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">

    <RadioGroup
        android:textAlignment="center"
        android:id="@+id/practice_choose_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            style="@style/AlertDialog.AppCompat.Light"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_game"/>

    </RadioGroup>

    <RadioGroup
        android:textAlignment="center"
        android:id="@+id/practice_choose_gamemode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            style="@style/AlertDialog.AppCompat.Light"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_game_mode"/>

    </RadioGroup>

    <Button
        android:id="@+id/confirm_practice_option_button"
        android:text="@string/confirm"
        android:textSize="24sp"
        style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>